	  support/regression/tests/gcc-torture-execute-20000121-1.c,
	  support/regression/tests/gcc-torture-execute-20000314-2.c,
	  support/regression/tests/gcc-torture-execute-20000412-2.c,
	  support/regression/tests/gcc-torture-execute-20000523-1.c,
	  support/regression/tests/gcc-torture-execute-20000717-2.c,
	  support/regression/tests/gcc-torture-execute-20001112-1.c,
	  support/regression/tests/gcc-torture-execute-20001221-1.c:
	  More long long support for mcs51.

2016-08-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.c,
	  src/mcs51/gen.h,
	  src/mcs51/ralloc.c,
	  The basics of long long support for mcs51.

2016-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix double underscores in manual.

2016-08-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/test-p99-conformance.c:
	  Enable a test for newer GCC, comment on other GCC issues.

2016-08-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  doc/sdccman.lyx,
	  support/regression/tests/for.c,
	  test-p99-conformance.c:
	  RFE #165: C99 compliance: for (int i=0; ...

2016-08-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/test-p99-conformance.c:
	  Disable a subtest for host, since it fails on older GCC, disable a subtest for backends that don't have long long.

2016-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/test-p99-conformance.c,
	  support/regression/fwk/lib/extern1.c:
	  Enable inlining test for host.

2016-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/test-p99-conformance.c:
	  Document SDCC bug correspondance to P99 conformance tests.

2016-08-13 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/test-p99-conformance.c:
	  Some P99 conformance tests.

2016-08-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/sim.src/mem.cc: rewrote some of the memory cell classes