@@ -9,7 +9,7 @@
 #endif
 
 // TODO: Enable when sdcc supports long long in these ports!
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
 typedef unsigned long long ULL;
 ULL back;
 ULL hpart, lpart;
@@ -28,8 +28,7 @@ build(long h, long l)
 void
 testTortureExecute (void)
 {
-#if !defined (__SDCC_mcs51) && !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
-#if 1 // longlong failure on 32-bit host
+#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
   if (build(0, 1) != 0x0000000000000001LL)
     ASSERT(0);
   if (build(0, 0) != 0x0000000000000000LL)
@@ -55,7 +54,6 @@ testTortureExecute (void)
   if (build(0xFFFFFFFF, 0xFFFFFFFE) != 0xFFFFFFFFFFFFFFFELL)
     ASSERT(0);
   return;
-#endif
 #endif
 }
 
